package org.example.models;

import com.fasterxml.jackson.annotation.JsonProperty;
import jakarta.persistence.*;

import java.util.ArrayList;
import java.util.List;

import static org.example.models.ApplicationStatus.NEW;

@Entity
public class ApplicationFile {

    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    @OneToOne(cascade = CascadeType.ALL)
    private ApplicantPersonalInfo personalInfo;
    private String fieldOfResearch;

    @ManyToMany
    private List<Professor> professors;

    @OneToMany(cascade = CascadeType.ALL, orphanRemoval = true, fetch = FetchType.EAGER)
    @JoinColumn(name = "application_id")
    private List<Document> documents;

    @OneToMany(cascade = CascadeType.ALL, orphanRemoval = true)
    private List<ProfessorEvaluation> evaluations;

    private ApplicationStatus status;

    private ApplicationStatus finalRecommendationStatus;

    private boolean openedByAdmin;

    private String openedBy;

    public ApplicationFile() {
        this.status = NEW;
    }

    public ApplicationFile(ApplicantPersonalInfo personalInfo, String fieldOfResearch, List<Professor> professors, List<Document> documents) {
        this.personalInfo = personalInfo;
        this.fieldOfResearch = fieldOfResearch;
        this.professors = professors;
        this.documents = documents;
        this.status = NEW;
    }

    public Long getId() {
        return this.id;
    }

    public void setId(Long id) {
        this.id = id;
    }


    public ApplicantPersonalInfo getPersonalInfo() {
        return personalInfo;
    }

    public void setPersonalInfo(ApplicantPersonalInfo personalInfo) {
        this.personalInfo = personalInfo;
    }

    public List<Document> getDocuments() {
        return documents;
    }

    public void setDocuments(List<Document> documents) {
        this.documents = documents;
    }

    public List<Professor> getProfessors() {
        return professors;
    }

    public void setProfessors(List<Professor> professors) {
        this.professors = professors;
    }

    public String getFieldOfResearch() {
        return fieldOfResearch;
    }

    public void setFieldOfResearch(String fieldOfResearch) {
        this.fieldOfResearch = fieldOfResearch;
    }

    public List<ProfessorEvaluation> getEvaluations() {
        return evaluations;
    }

    public void setEvaluations(List<ProfessorEvaluation> evaluations) {
        this.evaluations = evaluations;
    }

    public void addProfessorEvaluation(ProfessorEvaluation evaluation) {
        this.evaluations.add(evaluation);
    }

    public ApplicationStatus getStatus() {
        return status;
    }
    public void setStatus(ApplicationStatus status) {
        this.status = status;
    }

    public boolean isOpenedByAdmin() {
        return openedByAdmin;
    }

    public void setOpenedByAdmin(boolean openedByAdmin) {
        this.openedByAdmin = openedByAdmin;
    }

    public String getOpenedBy() {
        return openedBy;
    }

    public void setOpenedBy(String openedBy) {
        this.openedBy = openedBy;
    }

    @JsonProperty("finalRecommendation")
    public ApplicationStatus getFinalRecommendationStatus() { return this.finalRecommendationStatus; }

    public boolean setFinalRecommendationStatus(ApplicationStatus finalRecommendationStatus) {
        if (finalRecommendationStatus == ApplicationStatus.NOT_RECOMMENDED
                || finalRecommendationStatus == ApplicationStatus.RECOMMENDED_NO_FUNDING
                || finalRecommendationStatus == ApplicationStatus.RECOMMENDED_WITH_FUNDING
                ||  finalRecommendationStatus == ApplicationStatus.RECOMMENDED_NO_SUPERVISION) {
            this.finalRecommendationStatus = finalRecommendationStatus;
            return true;
        }
        return false;
    }
}
